<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/applyRvImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:contentDescription="@string/icon"
            android:cropToPadding="true"
            android:scaleType="fitXY" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/applyRvCsaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/applyCsaUIDShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/apply_showCsaUID"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/applyCsaUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="70dp"
                android:layout_marginBottom="30dp"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/applyRvCsaShowCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/apply_showCsaCount"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/applyRvCsaCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="70dp"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/applyShowTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/apply_showAddTime"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/applyTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/applyRvRemoveBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/apply_removeCsa"
                android:textSize="12sp" />

            <Button
                android:id="@+id/applyRvApplicationBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="5dp"
                android:text="@string/apply_applicationBtn" />

        </FrameLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
