<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterActivity">

    <EditText
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/register_user"
        android:inputType="textPersonName"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/register_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="@+id/registerUser"
        app:layout_constraintStart_toStartOf="@+id/registerUser"
        app:layout_constraintTop_toBottomOf="@+id/registerUser" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/registerId"
        app:layout_constraintStart_toStartOf="@+id/registerId"
        app:layout_constraintTop_toBottomOf="@+id/registerId" />

    <EditText
        android:id="@+id/registerPwdCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/register_pwdCheck"
        android:inputType="textPassword"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="@+id/registerPwd"
        app:layout_constraintStart_toStartOf="@+id/registerPwd"
        app:layout_constraintTop_toBottomOf="@+id/registerPwd" />

    <EditText
        android:id="@+id/registerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/register_uid"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="@+id/registerPwdCheck"
        app:layout_constraintStart_toStartOf="@+id/registerPwdCheck"
        app:layout_constraintTop_toBottomOf="@+id/registerPwdCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
